<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.presentation.SignUpFormFragment">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hanlight_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="21sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"/>

    <TextView
        android:id="@+id/idTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTxt"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"/>

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/idInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/idRule"
        app:layout_constraintTop_toBottomOf="@id/idTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"/>

    <TextView
        android:id="@+id/idErrorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="#ff0000"
        app:layout_constraintTop_toBottomOf="@id/idInput"
        app:layout_constraintStart_toStartOf="@id/idTxt"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        tools:text="@string/DuplicateAccount"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/pwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/idInput"
        app:layout_constraintStart_toStartOf="@id/idTxt"
        android:layout_marginTop="30dp"/>

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/pwInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwRule"
        app:layout_constraintTop_toBottomOf="@id/pwTxt"
        app:layout_constraintStart_toStartOf="@id/idInput"
        app:layout_constraintEnd_toEndOf="@id/idInput"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/pwErrorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidPw"
        android:textSize="10sp"
        android:textColor="#ff0000"
        app:layout_constraintTop_toBottomOf="@id/pwInput"
        app:layout_constraintStart_toStartOf="@id/pwTxt"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/checkPwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkPw"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/pwInput"
        app:layout_constraintStart_toStartOf="@id/idTxt"
        android:layout_marginTop="30dp" />

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/checkPwInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkPwTxt"
        app:layout_constraintStart_toStartOf="@id/pwInput"
        app:layout_constraintEnd_toEndOf="@id/pwInput"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/checkPwErrorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidCheckPw"
        android:textSize="10sp"
        android:textColor="#ff0000"
        app:layout_constraintTop_toBottomOf="@id/checkPwInput"
        app:layout_constraintStart_toStartOf="@id/checkPwTxt"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <kr.hanlight.common.widgets.CardButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:buttonText="@string/signUp"
        app:buttonTextSize="14sp"
        app:buttonTextColor="@android:color/white"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/activatedButton"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkPwInput"
        app:layout_constraintStart_toStartOf="@id/checkPwInput"
        app:layout_constraintEnd_toEndOf="@id/checkPwInput"
        android:layout_marginTop="30dp"
        app:cardElevation="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>