<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.presentation.SignUpAuthFragment">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/hanlight_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/authKeyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/userKey"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTxt" />

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/authKeyInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_user_input_default"
        android:hint="@string/userKeyIntroduce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authKeyTxt" />

    <TextView
        android:id="@+id/authKeyErrorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/invalidAuthKey"
        android:textColor="#ff0000"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/authKeyTxt"
        app:layout_constraintTop_toBottomOf="@id/authKeyInput"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/phoneNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phoneNumber"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/authKeyTxt"
        app:layout_constraintTop_toBottomOf="@id/authKeyInput" />

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/phoneNumberInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_user_input_default"
        android:hint="@string/phoneNumberIntroduce"
        app:layout_constraintEnd_toEndOf="@id/authKeyInput"
        app:layout_constraintStart_toStartOf="@id/authKeyInput"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTxt" />

    <TextView
        android:id="@+id/phoneNumberErrorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/invalidAuthKey"
        android:textColor="#ff0000"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/phoneNumberTxt"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInput"
        tools:visibility="visible" />

    <kr.hanlight.common.widgets.CardButton
        android:id="@+id/certificationBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:buttonText="@string/certification"
        app:buttonTextColor="@android:color/white"
        app:buttonTextSize="14sp"
        app:cardBackgroundColor="@color/activatedButton"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@id/phoneNumberInput"
        app:layout_constraintStart_toStartOf="@id/phoneNumberInput"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInput" />

    <TextView
        android:id="@+id/txtTermsOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsOfUse"
        android:textSize="11sp"
        android:textColor="#8e8e8e"
        app:layout_constraintTop_toBottomOf="@id/certificationBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>