<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.presentation.SignUpFragment">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hanlight_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="21sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"/>

    <TextView
        android:id="@+id/certificationKeyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userKey"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/signUpTxt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"/>

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/certificationKeyInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_user_input_default"
        android:hint="@string/userKeyIntroduce"
        app:layout_constraintTop_toBottomOf="@id/certificationKeyTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"/>

    <TextView
        android:id="@+id/phoneNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/certificationKeyTxt"
        app:layout_constraintTop_toBottomOf="@id/certificationKeyInput"
        android:layout_marginTop="30dp" />

    <kr.hanlight.login.views.FocusableEditText
        android:id="@+id/phoneNumberInput"
        style="@style/InputUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_user_input_default"
        android:hint="@string/phoneNumberIntroduce"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTxt"
        app:layout_constraintStart_toStartOf="@id/certificationKeyInput"
        app:layout_constraintEnd_toEndOf="@id/certificationKeyInput"
        android:layout_marginTop="8dp"/>

    <kr.hanlight.common.widgets.CardButton
        android:id="@+id/certificationBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:buttonText="@string/certification"
        app:buttonTextSize="14sp"
        app:buttonTextColor="@android:color/white"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/activatedButton"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInput"
        app:layout_constraintStart_toStartOf="@id/phoneNumberInput"
        app:layout_constraintEnd_toEndOf="@id/phoneNumberInput"
        android:layout_marginTop="44dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>